--- a/index.html
+++ b/index.html
@@ -12,40 +12,44 @@
 </head>
 
 <body>
-  <div class="container">
+  
     <div class="cnt-box">
      <div class="content">
        <h1>Learn to code by watching others</h1>
        <p>See how experienced developers solve problems in real-time.</br>Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
      </div>
      <div class="cont2">
-      <div class="try"> <b>Try it free 7 days </b>then $20/mo. thereafter
+      <div class="try"><p> <b>Try it free 7 days </b> 
+ then $20/mo. thereafter</p>
       </div>
       <div class="form">
         <form action="#">
            <div class="label-1">
            <input type="text" placeholder="First Name" id="first-name"  required>
+             <span>First name cannot be empty</span>
            </div></br>
            <div class="label-1">
            <input type="text" placeholder="Last Name" id="last-name" required>
+             <span>Last Name cannot be empty</span>
            </div> </br>
            <div class="label-1">
            <input type="email" placeholder="Email Address" id="email" required>
+              <span>Looks like this is not an email</span>
            </div> </br>
            <div class="label-1">
            <input type="password" placeholder="Password"  id="password" required>
+             <span>Password cannot be empty</span>
            </div> </br>
            <div class="label-1">
                 <button type="submit" id="button">claim your free trial</button>
           </div>
-          <p class="remdr">By clicking the button,you are agreeing to our <bold>Terms and Services</bold></p>
+          <small>By clicking the button,you are agreeing to our <a href="#">Terms and Services</a></small>
           
         </form>
       </div>
      </div>
 
        </div>
-  </div>
   <script src="script.js"></script>
 </body>
 
